# poseidon-gadget

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lints.yml  test.yml
benches/: poseidon.rs  rm_primitives.rs
src/: lib.rs  poseidon.rs  utilities.rs
src/poseidon/: pow5.rs  primitives.rs
src/poseidon/primitives/: p128pow5t3.rs
src/utilities/: cond_swap.rs
